//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Flavor {
  id String [pk]
  name String [unique, not null]
  coffees Coffee [not null]
}

Table Coffee {
  id String [pk]
  name String [not null]
  brand String [not null]
  flavors Flavor [not null]
}

Table CoffeeToFlavor {
  coffeesId String [ref: > Coffee.id]
  flavorsId String [ref: > Flavor.id]
}